2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined virtual destructor.
	* src/MetalinkParserState.h

2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Give NULL for second argument of getaddrinfo instead of "0".
	* src/NameResolver.cc

2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't use Time::parse(buf, "%Y%m%d%H%M%S") because Mac OS X and
	included strptime doesn't parse data for this format.
	* src/FtpConnection.cc
	* test/FtpConnectionTest.cc
	
2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed tests giving -1 for unsigned argument.
	* test/SingleFileDownloadContextTest.cc

2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't use sha256 in tests because it might not be supported by the
	SSL library.
	* test/MetalinkProcessorTest.cc
	
2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed tests giving -1 for unsigned argument.
	* test/AlphaNumberDecoratorTest
	* test/BitfieldManTest.cc
	* test/DefaultBtContextTest.cc
	
2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error without libcares when epoll is available.
	* src/EpollEventPoll.cc

2009-02-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Included fstream instead of iostream.
	* test/SignatureTest.cc

2009-02-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed #include <algorithm>
	* test/RequestGroupTest.cc

2009-02-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten AdaptiveURISelector::mayRetryWithIncreasedTimeout()
	using RequestGroup::extractURIResult().
	* src/AdaptiveURISelector.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* test/RequestGroupTest.cc

2009-02-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tests for array_ptr.
	* test/array_funTest.cc
	
2009-02-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
