@@ -447,7 +447,8 @@ void DefaultPieceStorage::setFileFilter(IntSequence seq)
   fileIndexes.erase(std::unique(fileIndexes.begin(), fileIndexes.end()), fileIndexes.end());
   std::deque<std::string> filePaths;
   const FileEntries& entries = diskAdaptor->getFileEntries();
-  for(size_t i = 0; i < entries.size(); i++) {
+  int32_t entriesSize = entries.size();
+  for(int32_t i = 0; i < entriesSize; i++) {
     if(std::find(fileIndexes.begin(), fileIndexes.end(), i+1) != fileIndexes.end()) {
       logger->debug("index=%d is %s", i+1, entries[i]->getPath().c_str());
       filePaths.push_back(entries[i]->getPath());
