@@ -1,5 +1,11 @@
 2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Suppressed compiler warning.
+	* src/AdaptiveURISelector.cc
+	* src/DefaultPieceStorage.cc
+	
+2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Defined virtual destructor.
 	* src/MetalinkParserState.h
 
